Updated SSLMutex directive to Mutex for Apache 2.4

--- a/COPY/etc/httpd/conf.d/cfme-https.conf
+++ b/COPY/etc/httpd/conf.d/cfme-https.conf
@@ -13,7 +13,7 @@ SSLPassPhraseDialog  builtin
 SSLSessionCache         shmcb:/var/cache/mod_ssl/scache(512000)
 SSLSessionCacheTimeout  300
 
-SSLMutex default
+Mutex default ssl-cache
 
 SSLRandomSeed startup file:/dev/urandom  256
 SSLRandomSeed connect builtin
