Fix issue where Apache was not properly started and could not be stopped/restarted with systemctl. This issue caused external authentication enablement in appliance console to fail since it restarts httpd and sssd upon configuration updates.
Issues at hand were:
- The usage of apachectl has changed in 7.1. we can no longer
  send httpd options, just the command.
- Specifying the miq_apache.log in the cfme-http.conf file
- /etc/init.d/httpd can no longer be used for status, we
  needed to use systemctl status httpd.

--- a/COPY/etc/httpd/conf.d/cfme-http.conf
+++ b/COPY/etc/httpd/conf.d/cfme-http.conf
@@ -3,6 +3,9 @@
 # Timeout: The number of seconds before receives and sends time out.
 Timeout 120
 
+# HTTP Start-up error log
+ErrorLog /var/www/miq/vmdb/log/apache/miq_apache.log
+
 # Disable this section if using HTTP only
 RewriteEngine On
 Options SymLinksIfOwnerMatch
