Apache serve /self_service directly from public
https://trello.com/c/jYiKP7C3

--- a/COPY/etc/httpd/conf.d/cfme-https-application.conf
+++ b/COPY/etc/httpd/conf.d/cfme-https-application.conf
@@ -3,6 +3,9 @@
 <VirtualHost *:443>
 KeepAlive on
 
+# Serve self service directly from public and avoid hitting Rails
+Alias /self_service /var/www/miq/vmdb/public/self_service
+
 # The following redirects files must be included to
 # handle most specific to least specific URLs.
 Include conf.d/cfme-redirects-ws
