--- a/COPY/etc/httpd/conf.d/cfme-https-application.conf
+++ b/COPY/etc/httpd/conf.d/cfme-https-application.conf
@@ -38,9 +38,9 @@ SSLCertificateKeyFile /var/www/miq/vmdb/certs/server.cer.key
 # Redirect favicon.ico
 RewriteEngine On
 <ifmodule mod_rewrite.c>
-  RewriteCond %{REQUEST_URI} ^/favicon\.ico$        [NC]
-  RewriteRule (.*) /assets/favicon.ico              [L,R=301]
-  RewriteRule (^/self_service/login$) /self_service [R=301]
+  RewriteCond %{REQUEST_URI} ^/favicon\.ico$ [NC]
+  RewriteRule (.*) /assets/favicon.ico       [L,R=301]
+  RewriteRule (^/self_service/((?!assets)(?!images)(?!img)(?!styles)(?!js)(?!fonts).+)$) /self_service [R=301]
 </ifmodule>
 
 SetEnvIf User-Agent ".*MSIE.*" \
