--- a/COPY/etc/httpd/conf.d/cfme-https-application.conf
+++ b/COPY/etc/httpd/conf.d/cfme-https-application.conf
@@ -40,7 +40,7 @@ RewriteEngine On
 <ifmodule mod_rewrite.c>
   RewriteCond %{REQUEST_URI} ^/favicon\.ico$ [NC]
   RewriteRule (.*) /assets/favicon.ico       [L,R=301]
-  RewriteRule (^/self_service/(?!(assets|images|img|styles|js|fonts)).+$) /self_service [R=301]</ifmodule>
+  RewriteRule (^/self_service/(?!(assets|images|img|styles|js|fonts)).+$) /self_service [R=301]
 </ifmodule>
 
 SetEnvIf User-Agent ".*MSIE.*" \
