--- a/COPY/usr/lib/systemd/system/evmserverd.service
+++ b/COPY/usr/lib/systemd/system/evmserverd.service
@@ -7,6 +7,7 @@ ExecStart=/bin/sh -c "/bin/evmserver.sh start"
 ExecStop=/bin/sh -c "/bin/evmserver.sh stop"
 Type=forking
 Restart=on-failure
+KillMode=process
 
 [Install]
 WantedBy=multi-user.target
