Added document root to the apache configuration file

--- a/COPY/etc/httpd/conf.d/cfme-https-application.conf
+++ b/COPY/etc/httpd/conf.d/cfme-https-application.conf
@@ -3,6 +3,8 @@
 <VirtualHost *:443>
 KeepAlive on
 
+DocumentRoot /var/www/miq/vmdb/public
+
 # Serve self service directly from public and avoid hitting Rails
 Alias /self_service /var/www/miq/vmdb/public/self_service
 
