--- a/COPY/usr/lib/systemd/system/miqtop.service
+++ b/COPY/usr/lib/systemd/system/miqtop.service
@@ -5,6 +5,7 @@ After=syslog.target
 [Service]
 ExecStart=/bin/sh -c "/bin/miqtop.sh"
 Type=forking
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
