Including websocket ProxyPass settings file in the apache configuration

--- a/COPY/etc/httpd/conf.d/cfme-http.conf
+++ b/COPY/etc/httpd/conf.d/cfme-http.conf
@@ -16,5 +16,6 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 #<VirtualHost *:80>
 #  Include conf.d/cfme-redirects-ui
 #  Include conf.d/cfme-redirects-ws
+#  Include conf.d/cfme-redirects-websocket
 #  ProxyPreserveHost on
 #</VirtualHost>
