--- a/COPY/etc/httpd/conf.d/cfme-https-application.conf
+++ b/COPY/etc/httpd/conf.d/cfme-https-application.conf
@@ -9,6 +9,7 @@ DocumentRoot /var/www/miq/vmdb/public
 # handle most specific to least specific URLs.
 Include conf.d/cfme-redirects-ws
 Include conf.d/cfme-redirects-ui
+Include conf.d/cfme-redirects-websocket
 ProxyPreserveHost on
 RequestHeader set X_FORWARDED_PROTO 'https'
 
