Renamed cfme in configuration files to manageiq

--- a/COPY/etc/httpd/conf.d/manageiq-http.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-http.conf
@@ -1,4 +1,4 @@
-## CFME HTTP Virtual Host Context
+## ManageIQ HTTP Virtual Host Context
 
 # Timeout: The number of seconds before receives and sends time out.
 Timeout 120
@@ -14,8 +14,8 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 
 # Enable this section if using HTTP only
 #<VirtualHost *:80>
-#  Include conf.d/cfme-redirects-ui
-#  Include conf.d/cfme-redirects-ws
-#  Include conf.d/cfme-redirects-websocket
+#  Include conf.d/manageiq-redirects-ui
+#  Include conf.d/manageiq-redirects-ws
+#  Include conf.d/manageiq-redirects-websocket
 #  ProxyPreserveHost on
 #</VirtualHost>
