--- a/COPY/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-https-application.conf
@@ -1,4 +1,4 @@
-## CFME SSL Virtual Host Context
+## ManageIQ SSL Virtual Host Context
 
 <VirtualHost *:443>
 KeepAlive on
@@ -7,9 +7,9 @@ DocumentRoot /var/www/miq/vmdb/public
 
 # The following redirects files must be included to
 # handle most specific to least specific URLs.
-Include conf.d/cfme-redirects-ws
-Include conf.d/cfme-redirects-ui
-Include conf.d/cfme-redirects-websocket
+Include conf.d/manageiq-redirects-ws
+Include conf.d/manageiq-redirects-ui
+Include conf.d/manageiq-redirects-websocket
 ProxyPreserveHost on
 RequestHeader set X_FORWARDED_PROTO 'https'
 
