Add an hourly check for log file growth.
This allows log rotation to continue daily but adds an
hourly safety check for excessive log file growth, ensuring
the appliance can still run.

https://bugzilla.redhat.com/show_bug.cgi?id=1327228

--- a/COPY/etc/logrotate.d/miq_logs.conf
+++ b/COPY/etc/logrotate.d/miq_logs.conf
@@ -1,6 +1,7 @@
 /var/www/miq/vmdb/log/*.log /var/www/miq/vmdb/log/apache/*.log /var/opt/rh/rh-postgresql94/lib/pgsql/data/pg_log/*.log {
   daily
-  dateext
+  size 1G
+  dateext dateformat -%Y%m%d-%s
   missingok
   rotate 14
   notifempty
