--- a/COPY/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-https-application.conf
@@ -37,10 +37,10 @@ SSLCertificateKeyFile /var/www/miq/vmdb/certs/server.cer.key
   SSLOptions +StdEnvVars
 </Directory>
 
-<Directory "/var/www/html/proxy_pages">
-  Options -Indexes
+<Location /proxy_pages/>
   ErrorDocument 403 /error/noindex.html
-</Directory>
+  ErrorDocument 404 /error/noindex.html
+</Location>
 
 SetEnvIf User-Agent ".*MSIE.*" \
          nokeepalive ssl-unclean-shutdown \
