manageiq-http.conf currently provides sample config for an http virtualhost. this appears out of date as it lacks /assets/ and /proxy_pages/ as compared with manageiq-https-application.conf; this commit adds those sections to provide a functional up to date example config

--- a/COPY/etc/httpd/conf.d/manageiq-http.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-http.conf
@@ -18,4 +18,14 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 #  Include conf.d/manageiq-redirects-ws
 #  Include conf.d/manageiq-redirects-websocket
 #  ProxyPreserveHost on
+#  <Location /assets/>
+#    Header unset ETag
+#    FileETag None
+#    ExpiresActive On
+#    ExpiresDefault "access plus 1 year"
+#  </Location>
+#  <Location /proxy_pages/>
+#    ErrorDocument 403 /error/noindex.html
+#    ErrorDocument 404 /error/noindex.html
+#  </Location>
 #</VirtualHost>
