Fix HTTP config section.

--- a/COPY/etc/httpd/conf.d/manageiq-http.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-http.conf
@@ -9,23 +9,36 @@ ErrorLog /var/www/miq/vmdb/log/apache/miq_apache.log
 # Disable this section if using HTTP only
 RewriteEngine On
 Options SymLinksIfOwnerMatch
+
+# These 2 lines redirect HTTP traffic to HTTPS. Disable this to enable HTTP.
 RewriteCond %{SERVER_PORT} !^443$
 RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 
-# Enable this section if using HTTP only
-#<VirtualHost *:80>
-#  Include conf.d/manageiq-redirects-ui
-#  Include conf.d/manageiq-redirects-ws
-#  Include conf.d/manageiq-redirects-websocket
-#  ProxyPreserveHost on
-#  <Location /assets/>
-#    Header unset ETag
-#    FileETag None
-#    ExpiresActive On
-#    ExpiresDefault "access plus 1 year"
-#  </Location>
-#  <Location /proxy_pages/>
-#    ErrorDocument 403 /error/noindex.html
-#    ErrorDocument 404 /error/noindex.html
-#  </Location>
-#</VirtualHost>
+# Enable this section if you want to use HTTP only
+# <VirtualHost *:80>
+#
+# ErrorLog /var/www/miq/vmdb/log/apache/error.log
+# TransferLog /var/www/miq/vmdb/log/apache/access.log
+#
+# KeepAlive on
+#
+# DocumentRoot /var/www/miq/vmdb/public
+#
+# Include conf.d/manageiq-redirects-ui
+# Include conf.d/manageiq-redirects-ws
+# Include conf.d/manageiq-redirects-websocket
+#
+# ProxyPreserveHost on
+#
+# LogLevel warn
+#
+# <Location /assets/>
+#   Header unset ETag
+#   FileETag None
+#   ExpiresActive On
+#   ExpiresDefault "access plus 1 year"
+# </Location>
+#
+# </VirtualHost>
+
+# To disable HTTPS (and have HTTP only) you also need to disable the Listen directive in manageiq-https.conf
