Change the pid file path to agree with SCL paths
Without this change repmgrd would try to put it's pid file
at the default location (/var/run/repmgrd) which would not exist
when using the SCL paths.

--- a/COPY/etc/systemd/system/rh-postgresql95-repmgr.service.d/config_file.conf
+++ b/COPY/etc/systemd/system/rh-postgresql95-repmgr.service.d/config_file.conf
@@ -1,2 +1,5 @@
 [Service]
+PIDFile=/var/opt/rh/rh-postgresql95/run/repmgr/repmgrd-9.5.pid
+
 Environment=REPMGRDCONF=/etc/repmgr.conf
+Environment=PIDFILE=/var/opt/rh/rh-postgresql95/run/repmgr/repmgrd-9.5.pid
