Add http redirects for the ansible API
This allows us to proxy requests through apache to the ansible API

This also allows us more control around what traffic goes to the
nginx server. For example we only proxy to the /api end point
and don't expose any of the rest of the application.

https://www.pivotaltracker.com/story/show/135450659

--- a/COPY/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-https-application.conf
@@ -10,6 +10,7 @@ DocumentRoot /var/www/miq/vmdb/public
 Include conf.d/manageiq-redirects-ws
 Include conf.d/manageiq-redirects-ui
 Include conf.d/manageiq-redirects-websocket
+Include conf.d/manageiq-redirects-ansible
 ProxyPreserveHost on
 RequestHeader set X_FORWARDED_PROTO 'https'
 
