--- a/COPY/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-https-application.conf
@@ -7,6 +7,7 @@ DocumentRoot /var/www/miq/vmdb/public
 
 # The following redirects files must be included to
 # handle most specific to least specific URLs.
+Include conf.d/manageiq-redirects-cockpit
 Include conf.d/manageiq-redirects-ws
 Include conf.d/manageiq-redirects-ui
 Include conf.d/manageiq-redirects-websocket
