- Adding LINK/etc/default/evm_apache to define Apache related environment variables - Updated LINK/etc/default/evm to source the evm_apache defaults file - Update script to leverage APPLIANCE_APACHE_* environment variables - Moved COPY and TEMPLATE Apache files to the new root under COPY and TEMPLATE - Updated miq_logs.conf to leverage APPLIANCE_APACHE_SERVICE_NAME - Updated manageiq-https-application.conf to do a Require all granted on /

--- a/COPY/etc/logrotate.d/miq_logs.conf
+++ b/COPY/etc/logrotate.d/miq_logs.conf
@@ -10,6 +10,6 @@
     source /etc/default/evm; /bin/sh ${APPLIANCE_SOURCE_DIRECTORY}/logrotate_free_space_check.sh $1
   endscript
   lastaction
-    /sbin/service httpd reload > /dev/null 2>&1 || true
+    source /etc/default/evm; /sbin/service ${APPLIANCE_APACHE_SERVICE_NAME} reload > /dev/null 2>&1 || true
   endscript
 }
