--- a/COPY/opt/rh/httpd24/root/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/opt/rh/httpd24/root/etc/httpd/conf.d/manageiq-https-application.conf
@@ -24,6 +24,10 @@ SSLCipherSuite ALL:!ADH:!EXPORT:!SSLv2:RC4+RSA:+HIGH:+MEDIUM:!LOW
 SSLCertificateFile /var/www/miq/vmdb/certs/server.cer
 SSLCertificateKeyFile /var/www/miq/vmdb/certs/server.cer.key
 
+<Location />
+  Require all granted
+</Location>
+
 <Location /assets/>
   Header unset ETag
   FileETag None
