--- a/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/postgresql.conf
+++ b/TEMPLATE/var/opt/rh/rh-postgresql95/lib/pgsql/data/postgresql.conf
@@ -612,6 +612,7 @@ default_text_search_config = 'pg_catalog.english'
 
 #include_dir = 'conf.d'			# include files ending in '.conf' from
 					# directory 'conf.d'
+include_dir = '/etc/manageiq/postgresql.conf.d'
 #include_if_exists = 'exists.conf'	# include file only if it exists
 #include = 'special.conf'		# include file
 
