Add support for the domain user attribute
https://bugzilla.redhat.com/show_bug.cgi?id=1424618

--- a/TEMPLATE/etc/httpd/conf.d/manageiq-remote-user.conf
+++ b/TEMPLATE/etc/httpd/conf.d/manageiq-remote-user.conf
@@ -7,3 +7,5 @@ RequestHeader set X_REMOTE_USER_FIRSTNAME %{REMOTE_USER_FIRSTNAME}e env=REMOTE_U
 RequestHeader set X_REMOTE_USER_LASTNAME  %{REMOTE_USER_LASTNAME}e  env=REMOTE_USER_LASTNAME
 RequestHeader set X_REMOTE_USER_FULLNAME  %{REMOTE_USER_FULLNAME}e  env=REMOTE_USER_FULLNAME
 RequestHeader set X_REMOTE_USER_GROUPS    %{REMOTE_USER_GROUPS}e    env=REMOTE_USER_GROUPS
+RequestHeader set X_REMOTE_USER_DOMAIN    %{REMOTE_USER_DOMAIN}e    env=REMOTE_USER_DOMAIN
+
