Rename ws to api to not be confused with websockets

--- a/COPY/etc/httpd/conf.d/manageiq-balancer-api.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-balancer-api.conf
@@ -1,4 +1,4 @@
-<Proxy balancer://evmcluster_ws/ lbmethod=bybusyness>
+<Proxy balancer://evmcluster_api/ lbmethod=bybusyness>
 BalancerMember http://0.0.0.0:4000
 BalancerMember http://0.0.0.0:4001
 BalancerMember http://0.0.0.0:4002
