--- a/COPY/etc/httpd/conf.d/manageiq-http.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-http.conf
@@ -15,8 +15,8 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 # Enable this section if using HTTP only
 #<VirtualHost *:80>
 #  DocumentRoot /var/www/miq/vmdb/public
+#  Include conf.d/manageiq-redirects-api
 #  Include conf.d/manageiq-redirects-ui
-#  Include conf.d/manageiq-redirects-ws
 #  Include conf.d/manageiq-redirects-websocket
 #  ProxyPreserveHost on
 #  <Location /assets/>
