--- a/COPY/usr/lib/systemd/system/evm-failover-monitor.service
+++ b/COPY/usr/lib/systemd/system/evm-failover-monitor.service
@@ -3,7 +3,7 @@ Description=PostgreSQL Failover Monitor for ManageIQ
 After=evmserverd.service
 
 [Service]
-ExecStart=/usr/bin/evm_failover_monitor
+ExecStart=source /etc/default/evm && bundle exec postgres_ha_admin
 Restart=on-failure
 
 [Install]
