Set ssl = on in our override file

--- a/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
+++ b/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
@@ -16,6 +16,7 @@ max_connections = 1000
 unix_socket_group = 'postgres'
 unix_socket_permissions = 0770
 
+ssl = on
 ssl_cert_file = '/var/www/miq/vmdb/certs/postgres.crt'
 ssl_key_file  = '/var/www/miq/vmdb/certs/postgres.key'
 
