Optimize PostgreSQL Settings for 4x12GB Applaince
tune wal_buffer, min_wal_size, and max_wal_size

--- a/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
+++ b/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
@@ -36,6 +36,8 @@ max_worker_processes = 10
 wal_level = 'logical'
 wal_log_hints = on
 wal_buffers = 16MB
+min_wal_size = 1GB
+max_wal_size = 2GB
 checkpoint_completion_target = 0.9
 
 #------------------------------------------------------------------------------
