Add cache headers for webpack
We convert ETags to max-age for asset pipeline assets
ETag:
 - the server needs to calculate the checksum
 - the client needs to ask the server if it has changed
   incurring the cost of an HTTP request, but not transferring the assets
max-age:
 - the server just sends the current date plus one year
 - the assets have a checksum in the filename. so a file will never change
 - the client does not need to ask the server if a date has changed
   no HTTP request

Chrome seems to mostly ignore cache headers, but firefox better follows
the contract. For assets using ETag, firefox is hitting the server checking
assets often.

We were using max-age for asset pipeline, but etags for webpack assets.

Now, we are using max-age for both.
In addition, we are now setting Cache-control: public stating
proxy servers can cache these assets

Changing this value reduces the requests made to the server, especially
for firefox.
This makes most impact for users with a higher latency connection

https://bugzilla.redhat.com/show_bug.cgi?id=1571223

--- a/COPY/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-https-application.conf
@@ -28,6 +28,15 @@ SSLCertificateKeyFile /var/www/miq/vmdb/certs/server.cer.key
 <Location /assets/>
   Header unset ETag
   FileETag None
+  Header merge Cache-Control public
+  ExpiresActive On
+  ExpiresDefault "access plus 1 year"
+</Location>
+
+<Location /packs/>
+  Header unset ETag
+  FileETag None
+  Header merge Cache-Control public
   ExpiresActive On
   ExpiresDefault "access plus 1 year"
 </Location>
