Change the name of the repmgr preload lib

--- a/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
+++ b/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
@@ -26,7 +26,7 @@ tcp_keepalives_interval = 75
 # RESOURCE USAGE (except WAL)
 #------------------------------------------------------------------------------
 
-shared_preload_libraries = 'pglogical,repmgr_funcs'
+shared_preload_libraries = 'pglogical,repmgr'
 max_worker_processes = 10
 
 #------------------------------------------------------------------------------
