--- a/COPY/usr/lib/systemd/system/evm-failover-monitor.service
+++ b/COPY/usr/lib/systemd/system/evm-failover-monitor.service
@@ -3,7 +3,7 @@ Description=PostgreSQL Failover Monitor for ManageIQ
 After=evmserverd.service
 
 [Service]
-ExecStart=/bin/sh -l -c "bundle exec postgres_ha_admin"
+ExecStart=/bin/sh -l -c "bundle exec rails r \"EvmDatabase.run_failover_monitor\""
 Restart=on-failure
 
 [Install]
