Use a script for running the rails runner command
Without this, the service fails and prints the 'rails new'
help to the journal logs

--- a/COPY/usr/lib/systemd/system/evm-failover-monitor.service
+++ b/COPY/usr/lib/systemd/system/evm-failover-monitor.service
@@ -3,7 +3,7 @@ Description=PostgreSQL Failover Monitor for ManageIQ
 After=evmserverd.service
 
 [Service]
-ExecStart=/bin/sh -l -c "bundle exec rails r \"EvmDatabase.run_failover_monitor\""
+ExecStart=/usr/bin/evm-failover-monitor
 Restart=on-failure
 
 [Install]
