Detach actioncable from the WebsocketServer and run it with the UI

--- a/COPY/etc/httpd/conf.d/manageiq-balancer-ui.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-balancer-ui.conf
@@ -10,3 +10,16 @@ BalancerMember http://0.0.0.0:3007
 BalancerMember http://0.0.0.0:3008
 BalancerMember http://0.0.0.0:3009
 </Proxy>
+
+<Proxy balancer://evmcluster_ui_ws/ lbmethod=bybusyness>
+BalancerMember ws://0.0.0.0:3000 disablereuse=on
+BalancerMember ws://0.0.0.0:3001 disablereuse=on
+BalancerMember ws://0.0.0.0:3002 disablereuse=on
+BalancerMember ws://0.0.0.0:3003 disablereuse=on
+BalancerMember ws://0.0.0.0:3004 disablereuse=on
+BalancerMember ws://0.0.0.0:3005 disablereuse=on
+BalancerMember ws://0.0.0.0:3006 disablereuse=on
+BalancerMember ws://0.0.0.0:3007 disablereuse=on
+BalancerMember ws://0.0.0.0:3008 disablereuse=on
+BalancerMember ws://0.0.0.0:3009 disablereuse=on
+</Proxy>
