Set logical replication parameters
Based on the guidance in https://www.postgresql.org/docs/10/logical-replication-config.html
max_logical_replication_workers needs to be set to roughly the number
of subscriptions we would expect and since we were previously setting
max_worker_process to 10 I went with 10 for this value.

This means that we would need to reserve some background workers
for other tasks so I bumped that to 15

--- a/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
+++ b/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
@@ -27,7 +27,7 @@ tcp_keepalives_interval = 75
 #------------------------------------------------------------------------------
 
 shared_preload_libraries = 'repmgr'
-max_worker_processes = 10
+max_worker_processes = 15
 
 #------------------------------------------------------------------------------
 # WRITE AHEAD LOG
@@ -45,6 +45,7 @@ checkpoint_completion_target = 0.9
 #------------------------------------------------------------------------------
 
 wal_sender_timeout = 0
+max_logical_replication_workers = 10
 
 #------------------------------------------------------------------------------
 # QUERY TUNING
