[manageiq-https-apache.conf] Secure host config
Provides an alternative apache configuration to secure hosts and prevent
them from Host Header Injection attacks via the /saml_login and
/oidc_login routes.

This doesn't change the default, but instructs the user on what to
change to secure an appliance from the attacks.

--- a/COPY/etc/httpd/conf.d/manageiq-http.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-http.conf
@@ -19,7 +19,7 @@ RewriteRule ^.*$ https://%{SERVER_NAME}%{REQUEST_URI} [L,R]
 #  Include conf.d/manageiq-redirects-api
 #  Include conf.d/manageiq-redirects-ui
 #  Include conf.d/manageiq-redirects-websocket
-#  ProxyPreserveHost on
+#  Include conf.d/manageiq-host-config
 #  <Location /assets/>
 #    Header unset ETag
 #    FileETag None
