--- a/COPY/etc/httpd/conf.d/manageiq-https-application.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-https-application.conf
@@ -11,7 +11,7 @@ Include conf.d/manageiq-redirects-cockpit
 Include conf.d/manageiq-redirects-api
 Include conf.d/manageiq-redirects-ui
 Include conf.d/manageiq-redirects-websocket
-ProxyPreserveHost on
+Include conf.d/manageiq-host-config
 RequestHeader set X_FORWARDED_PROTO 'https'
 
 ErrorLog /var/www/miq/vmdb/log/apache/ssl_error.log
