Fixes an issue where variants of an externally authenticated user X_REMOTE_USER can be specified for access to the API. This assures that X-Remote-User, X-Remote_User as well as X_Remote-User are also cleared from an inbound request thus restricting all X[-_]REMOTE[-_]USER signatures for External Authentication.

--- a/TEMPLATE/etc/httpd/conf.d/manageiq-remote-user.conf
+++ b/TEMPLATE/etc/httpd/conf.d/manageiq-remote-user.conf
@@ -1,3 +1,6 @@
+RequestHeader unset X-REMOTE-USER
+RequestHeader unset X-REMOTE_USER
+RequestHeader unset X_REMOTE-USER
 RequestHeader unset X_REMOTE_USER
 
 RequestHeader set X_REMOTE_USER           %{REMOTE_USER}e           env=REMOTE_USER
