move evm_postgres to miq.properties
postgres parameters are appliance specific
they help with PgAdmin and the appliance console

--- a/LINK/etc/default/manageiq.properties
+++ b/LINK/etc/default/manageiq.properties
@@ -11,3 +11,10 @@ KEY_ROOT=/var/www/miq/vmdb/certs
 LANGUAGE=en_US.UTF-8
 LANG=en_US.UTF-8
 LC_CTYPE=en_US.UTF-8
+
+# Postgres (appliance console, PgAdmin)
+APPLIANCE_PG_CTL=/usr/bin/pg_ctl
+APPLIANCE_PG_MOUNT_POINT=/var/lib/pgsql
+APPLIANCE_PG_DATA=/var/lib/pgsql/data
+APPLIANCE_PG_SERVICE=postgresql
+APPLIANCE_PG_PACKAGE_NAME=postgresql-server
