move BUNDLE_GEMFILE from evm_production and /enable to miq.properties
The gemfile is application specific and not ruby specific

--- a/LINK/etc/default/manageiq.properties
+++ b/LINK/etc/default/manageiq.properties
@@ -6,6 +6,7 @@ EXECJS_RUNTIME='Node'
 MALLOC_ARENA_MAX=1
 # Location of certificates and provider keys (miq-password and appliance console)
 KEY_ROOT=/var/www/miq/vmdb/certs
+BUNDLE_GEMFILE=/var/www/miq/vmdb/Gemfile
 
 # Force locale
 LANGUAGE=en_US.UTF-8
