remove unnecessary headers
unnecessary headers which may help attackers in planning further attacks.

--- a/COPY/etc/httpd/conf.d/manageiq-http.conf
+++ b/COPY/etc/httpd/conf.d/manageiq-http.conf
@@ -5,6 +5,8 @@ Timeout 120
 
 # HTTP Start-up error log
 ErrorLog /var/www/miq/vmdb/log/apache/miq_apache.log
+ServerSignature Off
+ServerTokens Prod
 
 RewriteEngine On
 
