run evmserverd as group manageiq
Files created will have the correct umask and group

--- a/COPY/usr/lib/systemd/system/evmserverd.service
+++ b/COPY/usr/lib/systemd/system/evmserverd.service
@@ -3,8 +3,12 @@ Description=EVM server daemon
 After=syslog.target
 
 [Service]
+WorkingDirectory=/var/www/miq/vmdb
+EnvironmentFile=/etc/default/manageiq*.properties
 ExecStart=/bin/sh -c "/bin/evmserver.sh start"
 ExecStop=/bin/sh -c "/bin/evmserver.sh stop"
+Group=manageiq
+UMask=0002
 Type=forking
 Restart=on-failure
 KillMode=process
