--- a/LINK/etc/default/manageiq.properties
+++ b/LINK/etc/default/manageiq.properties
@@ -39,3 +39,7 @@ RUBY_GC_HEAP_GROWTH_MAX_SLOTS=300000
 RUBY_GC_HEAP_INIT_SLOTS=600000
 # default: 1.8 - smaller number means growing slower
 RUBY_GC_HEAP_GROWTH_FACTOR=1.25
+
+# Ansible global variables
+ANSIBLE_LOCAL_TEMP=/tmp/.ansible_local_tmp
+ANSIBLE_REMOTE_TEMP=/tmp/.ansible_remote_tmp
