Remove rpm update check from watchdog
We using traditional rpm update mechanisms instead of rolling our own

--- a/COPY/usr/lib/systemd/system/evm-watchdog.service
+++ b/COPY/usr/lib/systemd/system/evm-watchdog.service
@@ -3,7 +3,8 @@ Description=evm watchdog process
 After=evmserverd.service
 
 [Service]
-ExecStart=/bin/evm_watchdog
+EnvironmentFile=/etc/default/manageiq*.properties
+ExecStart=/usr/bin/ruby /usr/bin/evm_watchdog.rb
 Restart=on-failure
 
 [Install]
