--- a/COPY/usr/lib/systemd/system/evm-watchdog.service
+++ b/COPY/usr/lib/systemd/system/evm-watchdog.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=evm watchdog process
-After=evmserverd.service
+After=manageiq.service
 
 [Service]
 EnvironmentFile=/etc/default/manageiq*.properties
