Rename vmdb-up -> manageiq-db-ready

--- a/COPY/usr/lib/systemd/system/manageiq-db-ready.service
+++ b/COPY/usr/lib/systemd/system/manageiq-db-ready.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=VMDB Up
+Description=ManageIQ DB Ready
 After=network.target
 Before=evmserverd.service
 ConditionPathExists=/var/www/miq/vmdb/config/database.yml
 
 [Service]
-ExecStart=/usr/bin/vmdb-up
+ExecStart=/usr/bin/manageiq-db-ready
 TimeoutStartSec=infinity
 Type=oneshot
 
