--- a/COPY/usr/lib/systemd/system/evmserverd.service
+++ b/COPY/usr/lib/systemd/system/evmserverd.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=EVM server daemon
-After=memcached.service vmdb-up.service
-Wants=memcached.service vmdb-up.service
+After=memcached.service manageiq-db-ready.service
+Wants=memcached.service manageiq-db-ready.service
 
 [Service]
 WorkingDirectory=/var/www/miq/vmdb
