Use manageiq environment for db-ready service

--- a/COPY/usr/lib/systemd/system/manageiq-db-ready.service
+++ b/COPY/usr/lib/systemd/system/manageiq-db-ready.service
@@ -6,6 +6,7 @@ ConditionPathExists=/var/www/miq/vmdb/config/database.yml
 
 [Service]
 ExecStart=/usr/bin/manageiq-db-ready
+EnvironmentFile=/etc/default/manageiq*.properties
 TimeoutStartSec=infinity
 Type=oneshot
 
