--- a/LINK/etc/default/manageiq.properties
+++ b/LINK/etc/default/manageiq.properties
@@ -1,7 +1,7 @@
 RAILS_ENV=production
 APPLIANCE=true
 # Force ExecJS to use node
-EXECJS_RUNTIME='Node'
+EXECJS_RUNTIME=Node
 # workaround for virtual memory spike observed with RHEL6
 MALLOC_ARENA_MAX=1
 # Location of certificates and provider keys (miq-password and appliance console)
