default encryption to scram-sha-256

--- a/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
+++ b/COPY/etc/manageiq/postgresql.conf.d/01_miq_overrides.conf
@@ -15,6 +15,7 @@ max_connections = 1000
 
 unix_socket_group = 'postgres'
 unix_socket_permissions = 0770
+password_encryption = scram-sha-256
 
 ssl = on
 
