--- a/TEMPLATE/etc/httpd/conf.d/manageiq-remote-user-saml.conf
+++ b/TEMPLATE/etc/httpd/conf.d/manageiq-remote-user-saml.conf
@@ -10,6 +10,6 @@ RequestHeader set X_REMOTE_USER_FIRSTNAME       %{REMOTE_USER_FIRSTNAME}e env=RE
 RequestHeader set X_REMOTE_USER_LASTNAME        %{REMOTE_USER_LASTNAME}e  env=REMOTE_USER_LASTNAME
 RequestHeader set X_REMOTE_USER_FULLNAME        %{REMOTE_USER_FULLNAME}e  env=REMOTE_USER_FULLNAME
 RequestHeader set X_REMOTE_USER_GROUPS          %{REMOTE_USER_GROUPS}e    env=REMOTE_USER_GROUPS
-RequestHeader set X_REMOTE_USER_GROUP_DELIMITER ":"
+RequestHeader set X_REMOTE_USER_GROUP_DELIMITER ";"
 RequestHeader set X_REMOTE_USER_DOMAIN          %{REMOTE_USER_DOMAIN}e    env=REMOTE_USER_DOMAIN
 
